--- a/MachingShapesGame/Base.lproj/Main.storyboard
+++ b/MachingShapesGame/Base.lproj/Main.storyboard
@@ -1,24 +1,89 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Fruits Vegetables View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="FruitsVegetablesViewController" customModule="MachingShapesGame" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="vegetable-basket" translatesAutoresizingMaskIntoConstraints="NO" id="LhE-Q7-F0t">
+                                <rect key="frame" x="227" y="690" width="172" height="157"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="172" id="PUV-SE-sSR"/>
+                                    <constraint firstAttribute="height" constant="157" id="cIJ-Er-6bo"/>
+                                </constraints>
+                            </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fruit-basket" translatesAutoresizingMaskIntoConstraints="NO" id="AYW-am-9Yj">
+                                <rect key="frame" x="15" y="690" width="172" height="157"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="157" id="lwS-qb-Hdc"/>
+                                    <constraint firstAttribute="width" constant="172" id="z5z-7w-BgB"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eZu-sd-mw7" userLabel="reload">
+                                <rect key="frame" x="334" y="64" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="Hhy-oe-djL"/>
+                                    <constraint firstAttribute="height" constant="60" id="tSG-Aq-NsS"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="reload"/>
+                                <connections>
+                                    <action selector="reloadTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wqH-AS-pce"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hJ6-aI-Zow" userLabel="reload">
+                                <rect key="frame" x="20" y="64" width="60" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="eTf-K0-DqJ"/>
+                                    <constraint firstAttribute="width" constant="60" id="gmA-pQ-Uc6"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="i1z-br-ykT"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="60" id="wuJ-Mc-XrM"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="back"/>
+                                <connections>
+                                    <action selector="backTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yZz-21-IY0"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="0.99004433371803979" green="0.86946922118701331" blue="0.81305540128927789" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="AYW-am-9Yj" secondAttribute="bottom" constant="15" id="25V-lG-hUH"/>
+                            <constraint firstItem="hJ6-aI-Zow" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="6Sq-V7-OEK"/>
+                            <constraint firstItem="hJ6-aI-Zow" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="A69-bp-1Xi"/>
+                            <constraint firstItem="eZu-sd-mw7" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" constant="20" id="Opf-lG-Cki"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="LhE-Q7-F0t" secondAttribute="bottom" constant="15" id="PuP-96-Yo1"/>
+                            <constraint firstItem="AYW-am-9Yj" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="15" id="ZjA-f8-YA8"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LhE-Q7-F0t" secondAttribute="trailing" constant="15" id="s0e-px-uMY"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="eZu-sd-mw7" secondAttribute="trailing" constant="20" id="tli-UZ-Vzq"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="fruitBasketImage" destination="AYW-am-9Yj" id="mXx-s5-RpX"/>
+                        <outlet property="vegetableBasketImage" destination="LhE-Q7-F0t" id="n3d-4E-5qF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="95.652173913043484" y="97.767857142857139"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="back" width="33.5" height="33.5"/>
+        <image name="fruit-basket" width="1333.5" height="1293.5"/>
+        <image name="reload" width="33.5" height="33.5"/>
+        <image name="vegetable-basket" width="200" height="182.5"/>
+    </resources>
 </document>
